syntax = "proto3";

package manager;

service Manager {
  rpc List(ListRequest) returns (ListResponse);

  rpc Get(GetRequest) returns (GetResponse);
  rpc GetCurrentClip(GetCurrentClipRequest) returns (GetCurrentClipResponse);

  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc BatchRemove(BatchRemoveRequest) returns (BatchRemoveResponse);
  rpc Clear(ClearRequest) returns (ClearResponse);

  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);

  rpc Mark(MarkRequest) returns (MarkResponse);

  rpc Length(LengthRequest) returns (LengthResponse);
}

enum ClipboardMode {
  Clipboard = 0;
  Selection = 1;
}

message ClipboardData {
  uint64 id = 1;
  bytes data = 2;
  string mime = 3;
  ClipboardMode mode = 4;
  uint64 timestamp = 5;
}

message InsertRequest {
  ClipboardMode mode = 1;
  bytes data = 2;
  string mime = 3;
}
message InsertResponse { uint64 id = 1; }

message GetRequest { uint64 id = 1; }
message GetResponse { ClipboardData data = 1; }

message GetCurrentClipRequest { ClipboardMode mode = 1; }
message GetCurrentClipResponse { ClipboardData data = 1; }

message ListRequest {}
message ListResponse { repeated ClipboardData data = 1; }

message UpdateRequest {
  uint64 id = 1;
  bytes data = 2;
  string mime = 3;
}
message UpdateResponse {
  bool ok = 1;
  uint64 new_id = 2;
}

message MarkRequest {
  uint64 id = 1;
  ClipboardMode mode = 2;
}
message MarkResponse { bool ok = 1; }

message LengthRequest {}
message LengthResponse { uint64 length = 1; }

message RemoveRequest { uint64 id = 1; }
message RemoveResponse { bool ok = 1; }

message BatchRemoveRequest { repeated uint64 ids = 1; }
message BatchRemoveResponse { repeated uint64 ids = 1; }

message ClearRequest {}
message ClearResponse {}
